syntax = "proto3";

package protocol;

import "proto/common.proto";
import "proto/status.proto";

option go_package = "protocol;protocol";

// 搜索班级
message SearchClassesReq
{
    int64 page_index = 1;
    int64 page_num = 2;
    string keyword = 3;
}
message SearchClassesResp
{
    Status status = 1;
    repeated Class classes = 2;
    int64 page_index = 3;
    int64 page_num = 4;
    int64 total = 5;
}

// 申请进入班级
message EnterClassReq
{
    int64 class_id = 1;
}

message EnterClassResp
{
    Status status = 1;
    bool is_success = 2;
}

// 申请退出班级
message QuitClassReq
{
    int64 class_id = 1;
}

message QuitClassResp
{
    Status status = 1;
    bool is_success = 2;
}

// 获取班级成员
// 包括了查看未批准的进入班级的请求
// 当学生申请进入班级的时候，就会在user——class表中插入一条记录，对于需要进行教师认证的班级，其is-check字段为false
// 这个请求返回user-class表中所有的记录，包括通过的和未通过的，is-check字段在ClassMember中
message GetMemberReq
{
    int64 class_id = 1;
}

message GetMemberResp
{
    Status status = 1;
    repeated ClassMember members = 2; 
}

// 教师批准/拒绝学生进入班级的申请
message ApplyEnterRequestReq
{
    int64 class_id = 1;
    int64 user_id = 2;
    bool is_apply = 3;  // 是否同意 
}

message ApplyEnterRequestResp
{
    Status status = 1;
    bool is_success = 2;
}

// 通过学生id获取班级
message GetClasserByUserID
{
    Status status = 1;
    repeated Class classes = 2;
}